objects/Channel_Business_Review__c.object
<CustomObject>
    <description>R5 Channel Business Review is a custom object to review the Channels, Partner, ABB Authorized value provider &amp; Strategic / Key Partner  who will be partnering with ABB to do business.</description>
    <fields>
        <fullName>ABB_view_of_partner_s_self_supportivenes__c</fullName>
        <description>R6 - Used for Channel Network Evaluation
No Integration usage
No Code usage</description>
        <formula>TEXT( General_Answer_4__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>E.g. Self-supporting technically and commercially, uses ABB online tools, sales tools, keeps people trained and company authorized etc. 0=Low, 5=High</inlineHelpText>
        <label>ABB view of partner’s self supportivenes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>SFDC-4190 - Account GUID</description>
        <formula>Account__r.GUID__c</formula>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Channel review to have a look-up relationship with the Account Object.</description>
        <inlineHelpText>The partner and business plan this review covers. If the scope is several branch offices, that need to be indicated in general comments below.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Channel_Business_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actions_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Text field to capture the Answer 1- Actions review section</description>
        <inlineHelpText>Review and update all actions related to this business plan. Add new actions as agreed. Indicate here when done by selecting the checkbox</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actions_Answer_2__c</fullName>
        <description>R5 - Text field to capture the Answer 2- Actions review section</description>
        <label>Total Number Of Actions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Flag1__c</fullName>
        <description>R5 - R5 - Flag for Must Have Question 1 in Actions section</description>
        <formula>IF( Actions_Answer_1__c==FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Actions section</description>
        <formula>IF(ISBLANK(Actions_Answer_2__c),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Minimum one action must be registered in the business plan</inlineHelpText>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Actions_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Actions review section</description>
        <inlineHelpText>Review and update all actions related to this business plan. Add new actions as agreed. Indicate here when done</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actions_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Actions_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Actions review section</description>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date_Hidden__c</fullName>
        <label>Actual Sales Year to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date_Quantification__c</fullName>
        <formula>IF (USD_Conversion_Rate__c &gt; 0,
	IF (Actual_Sales_Year_to_Date__c == 0, 0, 
	IF( (Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 20000, 1, IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 50000, 2, IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 100000, 3, 
	IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 250000, 4, IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 500000, 5, IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 750000, 6, 
	IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 1000000, 7, IF((Actual_Sales_Year_to_Date__c/USD_Conversion_Rate__c) &lt; 5000000, 8, 9))))))))),
	
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculated score from 0 (no sales) to 9 (over 5 MUSD). The steps are 0, 20k, 50k, 100k, 250k, 500k, 750k, 1M, 5M USD.</inlineHelpText>
        <label>Actual Sales Year to Date Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Year_to_Date__c</fullName>
        <description>R5- Copy the value from the Channel Business Plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Actual_Sales_Year_to_Date_Formula__c, Actual_Sales_Year_to_Date_Hidden__c)</formula>
        <label>Actual Sales Year to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <description>R5 - Picklist to capture the Answer 1- Market trends and offering - Partner view section</description>
        <inlineHelpText>Pick the value closest to the partner&apos;s view</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable / OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <description>R5 - Picklist to capture the Answer 2- Market trends and offering - Partner view section</description>
        <inlineHelpText>Pick the value closest to the partner&apos;s view</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable / OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <description>R5 - Picklist to capture the Answer 3- Market trends and offering - Partner view section</description>
        <inlineHelpText>Indicate the current progress compared to what&apos;s stated in the business plan</inlineHelpText>
        <label>Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>No Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As Planned or Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date for Approval Process</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status for Approval Process</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name for Approval Process</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Availability_of_Sales_Resource__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <formula>IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 0.5, 0,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 1, 1,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 2, 2,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 3, 3,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 4, 4,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 6, 5,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 7, 6,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &lt;= 8, 7,
	IF (No_of_Persons_involved_in_Sales__c * Average_time_used_in_sales__c &gt; 8, 8,
0)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculated score from 0 to 8 roughly corresponding to the # of Full-Time Equivalents.  (# of people times %-time spent)</inlineHelpText>
        <label>Sales Resources Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_of_Sales_enablers__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <inlineHelpText>E.g. ABB products available in stores, visible in store, visible on web, pricelists available, marketing material, sales tools etc. 0=Low, 5=High</inlineHelpText>
        <label>Availability of Sales enablers</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Availability_of_Service_Resource__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <formula>IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c == 0, 0,
	IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c &lt;= 0.5, 1,
	IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c &lt;= 1, 2,
	IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c &lt;= 2, 3,
	IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c &lt;= 3, 4,
	IF (No_of_Persons_involved_in_Service__c * Average_time_used_in_services__c &gt; 3, 5,
0))))))</formula>
        <inlineHelpText>Autocalculated score from 0 to 5 (roughly linear). 3 or more Full-Time Equivalents gives a 5.  (FTE = # of people times the %-time spent)</inlineHelpText>
        <label>Service Resources Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability_of_Technical_Resource__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <formula>IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  == 0, 0, 
IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  &lt;= 0.5, 1, 
IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  &lt;= 1, 2, 
IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  &lt;= 2, 3, 
IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  &lt;= 3, 4, 
IF (No_of_Persons_involved_in_Technical__c* Average_time_used_in_Techical__c  &gt; 3, 5, 
0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculated score from 0 to 5 (roughly linear). 3 or more Full-Time Equivalents gives a 5.  (FTE = # of people times the %-time spent)</inlineHelpText>
        <label>Technical Resources Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_Techical__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Estimation of average % of time</inlineHelpText>
        <label>% time used in Techsupport of ABB prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_sales__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Estimation of average % of time</inlineHelpText>
        <label>% time used in Sales of ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Average_time_used_in_services__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Estimation of average % of time</inlineHelpText>
        <label>% time used in Service of ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BU_s_Covered_Hidden__c</fullName>
        <description>R6</description>
        <label>BU&apos;s Covered Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_s_Covered__c</fullName>
        <description>R5 - BU&apos;s Covered</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.BU_s_Covered__c, BU_s_Covered_Hidden__c)</formula>
        <inlineHelpText>Values based on the chosen Product Mix under the Market Scope</inlineHelpText>
        <label>BU&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Current_Year_Hidden__c</fullName>
        <label>Budget Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Current_Year__c</fullName>
        <description>R5 - Budget Current Year copy from the channel business plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Budget_Current_Year_formula__c, Budget_Current_Year_Hidden__c)</formula>
        <label>Budget Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Status__c</fullName>
        <description>R6</description>
        <formula>TEXT(Joint_Business_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBR_Next_Review_Date_Hidden__c</fullName>
        <description>R6</description>
        <label>CBR Next Review Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBR_Next_Review_Date__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Date_for_Next_Review__c, CBR_Next_Review_Date_Hidden__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBR Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Market_Coverage_Hidden__c</fullName>
        <description>R5 Used to get the Channel market Coverage Name</description>
        <formula>Joint_Business_Plan__r.Channel_Market_Coverage__r.Name</formula>
        <label>Channel Market Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Operations_Section__c</fullName>
        <description>R5 - Comments field on Operations section</description>
        <inlineHelpText>Check that sufficient resources and skills are available to serve the market and also to keep the possible authorization. Assign actions as needed.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competing_Lines_Score__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <formula>CASE(TEXT(Answer_4__c), &quot;&quot;, 0, &quot;4 or more&quot;, 1, &quot;3&quot;, 2, &quot;2&quot;, 3, &quot;1&quot;, 4, &quot;0&quot;, 5, 0)</formula>
        <inlineHelpText>Score 1 (4 or more competing lines) - 5 (ABB only).</inlineHelpText>
        <label>Competing Lines Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>R5 - Date of Completion when the Status is changed to Completed.</description>
        <inlineHelpText>The date the status of this review is changed to Completed</inlineHelpText>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_saving__c</fullName>
        <description>R5 - Date of saving.</description>
        <label>Date of saving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_actual_sales_YTD_given_Hidden__c</fullName>
        <label>Date the actual sales YTD is given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_the_actual_sales_YTD_is_given__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Date_the_actual_sales_YTD_is_given__c, Date_the_actual_sales_YTD_given_Hidden__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date the actual sales YTD is given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_to_Complete__c</fullName>
        <description>R5 - Formula Field calculate days over/under due date for the channel business review</description>
        <formula>IF(
  ISBLANK(  Date_of_Completion__c  ),
  NULL,
   Expected_Date_for_Review_Completion__c - Date_of_Completion__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_for_Review_Completion__c</fullName>
        <description>R5 - Date for Next Review</description>
        <label>Expected Date for Review Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expressed_enthusiasm__c</fullName>
        <inlineHelpText>E.g Active proactive sales, participation in training and ABB events, attitude to invest in growth, successfully completing agreed actions etc. 0=Low, 5=High</inlineHelpText>
        <label>Expressed enthusiasm</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>Joint_Business_Plan__r.External_User__c</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_position__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <formula>IF( ISBLANK( General_Answer_1__c ) , 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>0 or 3. No text in field gives a 3, if any comments then 0</inlineHelpText>
        <label>Financial Stability Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Focused_Industry_hidden__c</fullName>
        <label>Focused Industry hidden</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Current_Year_Hidden__c</fullName>
        <label>Forecast Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Current_Year__c</fullName>
        <description>R5 - Copy the Values from the Channel Business Plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c, Forecast_Current_Year_Hidden__c)</formula>
        <label>Forecast Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Answer_1__c</fullName>
        <description>R5 - Answer 1- General topics section</description>
        <inlineHelpText>Add comments if not OK (e.g. if overall financial concerns or if consistent overdue to ABB)</inlineHelpText>
        <label>Comment if not</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Answer_2__c</fullName>
        <description>R5 - Answer 2- General topics section</description>
        <inlineHelpText>Add comments if not OK (e.g. if customer(s) indicated that they do not want to work with this partner)</inlineHelpText>
        <label>Comment if not</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Answer_3__c</fullName>
        <description>R5 - Answer 3 - General topics section</description>
        <inlineHelpText>Check that sufficient resources and skills are available to serve the market and also to keep the possible authorization</inlineHelpText>
        <label>Answer 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>R5 - General Comments</description>
        <inlineHelpText>Overall impression and comments. Will be printed on summary page of review .pdf -report</inlineHelpText>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question1 in General Section</description>
        <formula>IF( AND( ISBLANK( General_Answer_1__c ), RecordType.DeveloperName= $Label.SYSTEM_CHANNEL_PARTNER_BUSINESS_REVIEW_RECORD_TYPE_END_DETAIL),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in General Section</description>
        <formula>IF( AND(ISBLANK( General_Answer_2__c), RecordType.DeveloperName= $Label.SYSTEM_CHANNEL_PARTNER_BUSINESS_REVIEW_RECORD_TYPE_END_DETAIL ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in General Section</description>
        <formula>IF( AND(ISBLANK( General_Answer_3__c), RecordType.DeveloperName=  $Label.SYSTEM_CHANNEL_PARTNER_BUSINESS_REVIEW_RECORD_TYPE_END_DETAIL ),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Question_1__c</fullName>
        <defaultValue>$Label.CBR_General_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- General topics section</description>
        <inlineHelpText>ABB view on the financial stability and profitability. Sanity check to be done every year.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_2__c</fullName>
        <defaultValue>$Label.CBR_General_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- General topics section</description>
        <inlineHelpText>ABB view on the market reputation. Sanity check to be done every year.</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Question_3__c</fullName>
        <defaultValue>$Label.CBR_General_Question_3</defaultValue>
        <description>R5 - Question 3 under General topic section</description>
        <inlineHelpText>Indicate if the partner still has competent persons to deliver the services expected</inlineHelpText>
        <label>Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographical_focus__c</fullName>
        <description>R6 - Used for Channel Network Evaluation
No Intergration Relevance
No Code Usage</description>
        <inlineHelpText>How well the partner respects the geography defined as focus territory in the business plan. 0=Not at all, 5=Entirely</inlineHelpText>
        <label>Geographical focus</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_sufficient_to_customer_needs__c</fullName>
        <description>R6 - Used for Channel Network Evaluation</description>
        <inlineHelpText>0=Not at all, 5=Entirely, or Not Relevant if inventory is not expected (e.g. System Integrators)</inlineHelpText>
        <label>Inventory sufficient to customer needs</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Closed_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest Closed Review?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5-Channel review to have a look-up relationship with the Joint Business Plan Object.</description>
        <inlineHelpText>The partner business plan this review covers. If the scope is several branch offices, that need to be indicated in general comments below.</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Reviews</relationshipLabel>
        <relationshipName>Channel_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Level_of_Competency__c</fullName>
        <description>&quot; 0 = Insuffucient, 1 = Low 3 = Meets authorization requrements 4 =Exceeds auth. Requirmeents&quot;</description>
        <inlineHelpText>&quot; 0 = Insuffucient, 1 = Low 3 = Meets authorization requrements 4 =Exceeds auth. Requirmeents&quot;</inlineHelpText>
        <label>Level of Competency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question 1 in Market trends section</description>
        <formula>IF(ISPICKVAL( Answer_1__c , &quot;&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Market trends section</description>
        <formula>IF(ISPICKVAL( Answer_2__c , &quot;&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Trend_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in Market trends section</description>
        <formula>IF( ISPICKVAL( Answer_3__c , &quot;&quot;),IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Possible_Score__c</fullName>
        <description>R6</description>
        <label>Maximum Possible Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Sales__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of sales people working with ABB products. Leave blank if irreleant.</inlineHelpText>
        <label>Sales people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Service__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of service people working with ABB products. Leave blank if irreleant.</inlineHelpText>
        <label>Service people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Persons_involved_in_Technical__c</fullName>
        <description>R5- Channel Partner Business Reviews Field.</description>
        <inlineHelpText>Number of technical people working with ABB products. Leave blank if irreleant.</inlineHelpText>
        <label>Tech people working with ABB products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <description>R5 - Notes on Each Section 1</description>
        <inlineHelpText>Additional information about market trend and offering</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>